--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -337,12 +337,12 @@ talks-2025:
     speaker: ""
     special: blank
     url: ""
-  - title: Keynote
+  - title: "How to Grow More Functional Programmers"
     day: day2
     stage: stage1
     time: 09:00 - 10:00
     speaker: Evan Czaplicki
-    url: ""
+    url: /editions/2025/talks/how-to-grow-more-functional-programmers
   - title: ""
     day: day2
     stage: stage2
