Add Netflix as a sponsor

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -146,3 +146,8 @@ sponsors:
     type: Bronze
     logo: assets/img/2025/sponsors/siriusxm.png
     url: https://www.siriusxm.com/
+
+  - title: Netflix
+    type: Bronze
+    logo: assets/img/2025/sponsors/netflix.png
+    url: https://about.netflix.com/
