--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -758,10 +758,12 @@ talks-2025:
     time: 17:00 - 17:40
     speaker: Li Haoyi
     url: /editions/2025/talks/easy-scala-builds-with-the
-  - title: To be confirmed
+  - title: "MeshCI: defining and running workflows in Scala"
     day: day3
     stage: stage4
     time: 17:00 - 17:40
+    speaker: Jakob Odersky
+    url: /editions/2025/talks/meshci-defining-and-running-workflows-in-scala
 
   - title: Registration
     day: day3
@@ -1601,3 +1603,12 @@ speakers:
     Known online as @coldenzero, Muayad actively shares ideas, mentors engineers, and contributes to the developer community. He's driven by a belief that the future of work will be agentic, deeply contextual, and collaborative—and he's helping to build that future, one system at a time."
   talk: llms-in-the-wild
   image: assets/img/2025/speakers/muayad-sayed-ali.png
+
+- name: "Jakob Odersky"
+  position: Independent Software Engineer
+  image: assets/img/2025/speakers/jakob-odersky.jpg
+  about: "Jakob is an independent Software Engineer. His introduction to Scala was in its 1.x days, and he has been using it ever since."
+  talk: meshci-defining-and-running-workflows-in-scala
+  linkedin: https://www.linkedin.com/in/jodersky
+  twitter: https://x.com/jodersky
+  github: https://github.com/jodersky
